--- a/index.html
+++ b/index.html
@@ -82,41 +82,33 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Tyler Ransom</h1>
-        <p>Associate Professor of Economics<br>University of Oklahoma</p>
-        <p>Research Fellow<br><a href="https://www.iza.org/person/24155/tyler-ransom">Institute for the Study of Labor (IZA)</a></p>
-        <p>Fellow<br><a href="https://glabor.org/user/tyleransom/">Global Labor Organization (GLO)</a></p>
-    <h3><a href="https://tyleransom.github.io/">Home</a></h3>
-        <h3><a href="https://tyleransom.github.io/research.html">Research</a></h3>
-    <h3><a href="https://tyleransom.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://tyleransom.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://tyleransom.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://tyleransom.github.io/personal.html">Personal</a></h3>
+        <h1>Mingbo Zheng</h1>
+        <p>Associate Professor of Economics<br>Chang'an University</p>
+    <h3><a href="https://mbzheng.github.io/">Home</a></h3>
+        <h3><a href="https://mbzheng.github.io/research.html">Research</a></h3>
+    <h3><a href="https://mbzheng.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://mbzheng.github.io/code.html">Code</a></h3> 
+        <h3><a href="https://mbzheng.github.io/teaching.html">Teaching</a></h3> 
+        <h3><a href="https://mbzheng.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
-          <a href="mailto:ransom@ou.edu" class="author-social" target="_blank"><i class="fa fa-fw fa-envelope-square"></i> Email</a><br>
-          <a href="https://scholar.google.com/citations?user=eohlTTcAAAAJ&hl=en" target="_blank"><i class="ai ai-fw ai-google-scholar-square"></i> Scholar</a><br>
-          <a href="https://orcid.org/0000-0002-6910-0363"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
-          <a href="http://ideas.repec.org/f/pra541.html"><i class="ai ai-fw ai-ideas-repec-square"></i> RePEc</a><br>
-          <a href="http://github.com/tyleransom"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
-          <a href="http://twitter.com/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-twitter-square"></i> Twitter</a><br>
-          <a href="http://linkedin.com/in/tyleransom" class="author-social" target="_blank"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a><br>
+          <a href="https://orcid.org/0000-0002-0853-5195"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
+          <a href="http://jgxy.chd.edu.cn/teach_show.aspx?id=4055"><i class="ai ai-fw ai-ideas-repec-square"></i> Office</a><br>
+          <a href="http://github.com/winlty"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <br>
         </div>
         <br>
-
-    <p><b>Contact:</b><br>Department of Economics<br>University of Oklahoma<br>322 CCD1, 308 Cate Center Drive<br>Norman, OK 73072</p>
+, Chang'an University(CHD)
+Address: Middle-section, Nan'er Huan Road, Beilin District, Xi'an, Shaanxi, P.R. China 710064
+        
+    <p><b>Contact:</b><br>School of Economics and Management<br>Chang'an University<br>Middle-section, Nan'er Huan Road, Beilin District, Xi'an, Shaanxi<br> P.R. China 710064</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG_1781-Edit copy.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
-  <p>I am an Associate Professor of <a href="http://www.ou.edu/cas/economics">Economics</a> at the <a href="http://www.ou.edu/">University of Oklahoma</a>, a Research Fellow at the <a href="https://www.iza.org/">Institute for the Study of Labor (IZA)</a>, and a Fellow at <a href="https://www.globalabororganization.org/">Global Labor Organization (GLO)</a>. I received my PhD in <a href="http://econ.duke.edu">Economics</a> from <a href="http://www.duke.edu">Duke University</a> in 2015, where I specialized in dynamic models of human capital accumulation.</p>
+      <img src="IMG.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
+  <p>Mingbo Zheng is an associate professor at School of Economics and Management, Chang'an University. His research areas include technology innovation, green development, and digital economy. His work has been published in Energy Economics, Business Strategy and the Environment, Economic Modelling, Renewable Energy, Economic Systems, Emerging Markets Finance and Trade, etc.</p>
 
-  <p>My research focuses on labor economics, economics of education, urban economics, and applications of machine learning. I have published extensively in leading economics journals, including the <i>Journal of Political Economy</i>, the <i>Journal of Labor Economics</i>, the <i>Journal of Human Resources</i>, and the <i>Journal of Econometrics</i>. My recent work has examined college admissions practices, educational inequality, and human capital development. I also serve as an Associate Editor of the <i>Annals of Economics and Statistics</i>.</p>
-
-  <p>At OU, I direct the Economics BA/MA Program and teach courses in econometrics, data science, and economics of education at both undergraduate and graduate levels. My contributions to research and teaching were recognized with the 2022 Irene Rothbaum Outstanding Assistant Professor Award from the OU Dodge Family College of Arts & Sciences. My research has had significant policy impact and has been featured in major media outlets including the <i>New York Times</i>, <i>The Economist</i>, <i>The Atlantic</i>, and <i>The Guardian</i>.</p>
-
-  <p>I bring strong technical expertise to my research, with proficiency in Matlab, Stata, R, Julia, Python, LaTeX, Shell/Bash, SLURM, and Git. I also have advanced proficiency in Japanese and beginning knowledge of Korean and German.</p>
+  <p>He is the anonymous reviewer of Energy Economics, Economic Analysis and Policy, British Accounting Review, Journal of International Financial Markets, Institutions & Money, Socio-Economic Planning Sciences, Economic Modelling, Emerging Markets Finance and Trade, Land Use Policy, Energy Strategy Reviews, Financial Innovation, and Innovation & Green Development. He was served as the guest editor of Emerging Markets Finance and Trade, Environmental Science and Pollution Research, Innovation & Green Development.</p>
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
