--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <script src="https://use.fontawesome.com/baff6f55f5.js"></script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Tyler Ransom by tyleransom</title>
+    <title>Mingbo Zheng (Chang'an University) </title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -84,26 +84,26 @@
       <header>
         <h1>Mingbo Zheng</h1>
         <p>Associate Professor of Economics<br>Chang'an University</p>
-    <h3><a href="https://mbzheng.github.io/">Home</a></h3>
-        <h3><a href="https://mbzheng.github.io/research.html">Research</a></h3>
-    <h3><a href="https://mbzheng.github.io/research/CV.pdf">CV</a></h3>  
-        <h3><a href="https://mbzheng.github.io/code.html">Code</a></h3> 
-        <h3><a href="https://mbzheng.github.io/teaching.html">Teaching</a></h3> 
-        <h3><a href="https://mbzheng.github.io/personal.html">Personal</a></h3>
+    <h3><a href="https://mingbozheng.github.io/">Home</a></h3>
+        <h3><a href="https://mingbozheng.github.io/research.html">Research</a></h3>
+    <h3><a href="https://mingbozheng.github.io/research/CV.pdf">CV</a></h3>  
+        <h3><a href="https://mingbozheng.github.io/news.html">News</a></h3> 
+        <h3><a href="https://mingbozheng.github.io/writings.html">Writings</a></h3> 
+        <h3><a href="https://mingbozheng.github.io/personal.html">Personal</a></h3>
     <b>Social</b><br>
         <div class="social-row">
           <a href="https://orcid.org/0000-0002-0853-5195"><i class="ai ai-fw ai-orcid-square"></i> ORCID</a><br>
           <a href="http://jgxy.chd.edu.cn/teach_show.aspx?id=4055"><i class="ai ai-fw ai-ideas-repec-square"></i> Office</a><br>
-          <a href="http://github.com/winlty"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
+          <a href="http://github.com/mingbozheng"><i class="fa fa-fw fa-github-square"></i> GitHub</a><br>
           <br>
         </div>
         <br>
         
-    <p><b>Contact:</b><br>School of Economics and Management<br>Chang'an University<br>Middle-section, Nan'er Huan Road, Beilin District, Xi'an, Shaanxi<br> P.R. China 710064</p>
+    <p><b>Contact:</b><br>School of Economics and Management<br>Chang'an University<br>Middle-section, Nan'er Huan Road, Beilin District, Xi'an, Shaanxi<br> P.R. China 710064<br>mbzheng@chd.edu.cn</p>
     <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </header>
       <section>
-      <img src="IMG.jpg" height="250" width="250" alt="Tyler Ransom"></h3>
+      <img src="IMG.jpg" height="250" width="350" alt="Mingbo Zheng"></h3>
   <p>Mingbo Zheng is an associate professor at School of Economics and Management, Chang'an University. His research areas include technology innovation, green development, and digital economy. His work has been published in Energy Economics, Business Strategy and the Environment, Economic Modelling, Renewable Energy, Economic Systems, Emerging Markets Finance and Trade, etc.</p>
 
   <p>He is the anonymous reviewer of Energy Economics, Economic Analysis and Policy, British Accounting Review, Journal of International Financial Markets, Institutions & Money, Socio-Economic Planning Sciences, Economic Modelling, Emerging Markets Finance and Trade, Land Use Policy, Energy Strategy Reviews, Financial Innovation, and Innovation & Green Development. He was served as the guest editor of Emerging Markets Finance and Trade, Environmental Science and Pollution Research, Innovation & Green Development.</p>
